@@ -11,11 +11,10 @@ import org.springframework.data.domain.PageImpl;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 public class TestData {
-    public static AddEmployeeModel generateEmployeeModelRequest(){
+    public static AddEmployeeModel generateEmployeeModelRequest() {
         LocalDate now = LocalDate.now();
         return AddEmployeeModel.builder()
                 .firstName("Test")
@@ -25,7 +24,7 @@ public class TestData {
                 .build();
     }
 
-    public static Employee generateEmployee(){
+    public static Employee generateEmployee() {
         LocalDate now = LocalDate.now();
         LocalDateTime localDateTime = now.atStartOfDay();
         Employee employee = Employee.builder()
@@ -38,7 +37,7 @@ public class TestData {
         return employee;
     }
 
-    public static AddEmployeeModel generateEmployeeModelRequestWithManager(){
+    public static AddEmployeeModel generateEmployeeModelRequestWithManager() {
         LocalDate now = LocalDate.now();
         return AddEmployeeModel.builder()
                 .firstName("Test")
@@ -49,7 +48,7 @@ public class TestData {
                 .build();
     }
 
-    public static Manager generateManager(){
+    public static Manager generateManager() {
         Employee employee = generateEmployee();
         Manager manager = Manager.builder()
                 .employee(employee)
@@ -58,7 +57,7 @@ public class TestData {
         return manager;
     }
 
-    public static EmployeeModel generateEmployeeModel(){
+    public static EmployeeModel generateEmployeeModel() {
         return EmployeeModel.builder()
                 .firstName("Test")
                 .lastName("Test")
@@ -75,10 +74,16 @@ public class TestData {
                 .build();
     }
 
+    public static Page<Employee> getEmployees() {
+        Employee employee = generateEmployee();
+        List<Employee> employees = List.of(employee);
+        return new PageImpl(employees);
+    }
+
     public static Page<Manager> getManagers() {
         Manager manager = generateManager();
-        List<Manager> managers = Collections.singletonList(manager);
-        return (Page<Manager>) new PageImpl(managers);
+        List<Manager> managers = List.of(manager);
+        return  new PageImpl(managers);
     }
 
     public static Page<EmployeeManager> getEmployeeManagers() {
